@@ -25,6 +25,7 @@ Release 0.9.10
 - jscrollerSideboxes: initial version
 - integrate ZMViewUtils into ZMSavantView; provide new $resources view var
   replacing the $utils method wrapper around ZMTemplateManager
+- properly split template and resource path for view related methods
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
